ocp-virt/base/routes/keycloak-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: keycloak-route
spec:
  to:
    kind: Service
    name: keycloak-svc
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
